<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".TermAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addTermLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_details"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/termGuideLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tip2"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/termTitleField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/ex_spring_term"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:autofillHints="" tools:targetApi="o" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/colorDesc"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/termStartField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:hint="@string/mm_dd_yyyy"
            android:inputType="date"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:autofillHints="" tools:targetApi="o" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textAlignment="center"
            android:textColor="@color/colorDesc"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/termEndField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="7"
            android:hint="@string/mm_dd_yyyy"
            android:inputType="date"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" tools:targetApi="o" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/end_date"
            android:textAlignment="center"
            android:textColor="@color/colorDesc"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/courseMonitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#292929"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/termCourseLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assigned_courses"
            android:textAlignment="center"
            android:textColor="@color/colorDesc"
            android:textSize="13sp"
            android:visibility="invisible" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorButton"
            android:onClick="saveButtonPressed"
            android:text="@string/save"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/holo_purple"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
