<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".AssessmentAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addAssessmentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assessment_details"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/assessmentLabelGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tip2"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/performanceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:checked="true"
                android:text="@string/performance"
                android:textColor="@color/colorDesc" />

            <RadioButton
                android:id="@+id/objectiveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/objective"
                android:textColor="@color/colorDesc" />
        </RadioGroup>

        <EditText
            android:id="@+id/assessmentTitleField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/ex_mobile_app_development_abm1"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:autofillHints="" tools:targetApi="o" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/colorDesc"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/due_date"
                android:textAlignment="center"
                android:textColor="@color/colorDesc"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/assessmentDueDateField"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:hint="@string/mm_dd_yyyy"
                android:inputType="date"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_date"
                android:textAlignment="center"
                android:textColor="@color/colorDesc"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/assessmentGoalField"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:cursorVisible="false"
                android:gravity="center_vertical"
                android:hint="@string/mm_dd_yyyy"
                android:inputType="date"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/goalSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryDark"
                android:onClick="setTimePicker"
                android:text="@string/alert"
                android:textColor="?attr/colorError"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course"
                android:textColor="@color/colorDesc"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/courseSpinner"
                style="@android:style/Widget.Holo.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:popupBackground="@android:drawable/editbox_dropdown_light_frame" />

        </LinearLayout>

        <Button
            android:id="@+id/assessmentSave"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorButton"
            android:onClick="saveButtonPressed"
            android:text="@string/save"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/holo_purple"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
