<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".CourseAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addCourseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_details"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/courseGuideLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tip2"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/courseTitleField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/ex_intro_to_humanities"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:autofillHints="" tools:targetApi="o" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/colorDesc"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/courseStatusField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:hint="@string/ex_in_progress"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:autofillHints="" tools:targetApi="o" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/status"
            android:textAlignment="center"
            android:textColor="@color/colorDesc"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textAlignment="center"
                android:textColor="@color/colorDesc"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/courseStartField"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:hint="@string/mm_dd_yyyy"
                android:inputType="date"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/courseSwitch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryDark"
                android:onClick="startDateTimePicker"
                android:text="@string/alert"
                android:textColor="?attr/colorError"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textAlignment="center"
                android:textColor="@color/colorDesc"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/courseEndField"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:hint="@string/mm_dd_yyyy"
                android:inputType="date"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/courseSwitch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondaryDark"
                android:onClick="endDateTimePicker"
                android:text="@string/alert"
                android:textColor="?attr/colorError"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term"
                android:textColor="@color/colorDesc"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/termSpinner"
                style="@android:style/Widget.Holo.Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:popupBackground="@android:drawable/editbox_dropdown_light_frame" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/notes"
                android:textColor="@color/colorDesc"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/courseNotesField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="14"
                android:hint="@string/notes_hint"
                android:inputType="textMultiLine"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                tools:targetApi="o" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:onClick="shareNotes"
                app:srcCompat="@drawable/share" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mentor"
                android:textAlignment="center"
                android:textColor="@color/colorDesc"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/mentorNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/ex_charles_xavier"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/phone" />

            <EditText
                android:id="@+id/mentorPhoneField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ex_385_428_0000"
                android:inputType="phone"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="13sp"
                android:autofillHints="" tools:targetApi="o" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/email" />

            <EditText
                android:id="@+id/mentorEmailField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ex_charles_xav_wgu_edu"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="13sp"
                android:autofillHints="" tools:targetApi="o" />

        </LinearLayout>

        <TextView
            android:id="@+id/assessmentMonitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#292929"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="13sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/courseAssessmentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/assessments"
            android:textColor="@color/colorDesc"
            android:textSize="13sp"
            android:visibility="invisible" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@color/colorButton"
            android:onClick="saveButtonPressed"
            android:text="@string/save"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/holo_purple"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
