<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MentorActivity">

    <EditText
        android:id="@+id/mentorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ex_elaine_moran"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="23sp"
        android:textStyle="bold"
        android:autofillHints="" tools:targetApi="o"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/program_mentor"
        android:textColor="@color/colorDesc"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/mentorPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ex_385_428_0000"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:autofillHints="" tools:targetApi="o"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/phone" />

    <EditText
        android:id="@+id/mentorEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ex_elmrocks_wgu_edu"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:autofillHints="" tools:targetApi="o"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/email" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorButton"
        android:onClick="saveButtonPressed"
        android:text="@string/save"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/holo_purple"
        android:textStyle="bold" />

</LinearLayout>
