<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="135dp"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="123dp"
                android:layout_height="123dp"
                android:background="@drawable/silver_button"
                android:onClick="openTermActivity"
                android:text="@string/terms"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="123dp"
                android:layout_height="123dp"
                android:background="@drawable/silver_button"
                android:onClick="openCourseActivity"
                android:text="@string/courses"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="123dp"
                android:layout_height="123dp"
                android:background="@drawable/silver_button"
                android:onClick="openAssessmentActivity"
                android:text="@string/assessments"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/mentorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/homeTextView"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:onClick="openMentorActivity"
            android:textAlignment="center"
            android:textColor="@color/colorDesc"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
